--- a/Aula04Mar/app/src/main/res/layout/fragment_primeiro.xml
+++ b/Aula04Mar/app/src/main/res/layout/fragment_primeiro.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PrimeiroFragment"
-    android:background="@color/purple_200">
+    android:background="@color/purple_200"
+    tools:context=".PrimeiroFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/primeiroFragmentListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
